# Ion

./: CMakeLists.txt  build.bat  build.sh
Ion/: CMakeLists.txt  Ipch.h
Ion/Concept/: IFragmentShaderLanguageConcept.txt
Ion/Core/: ICompiler.cpp  ICompiler.h
Ion/Tokenization/: ITokenizer.cpp  ITokenizer.h  ITokens.cpp  ITokens.h
Ion/Utils/: IError.cpp  IError.h
Sources/: IBase.h
Sources/Concept/: IVertexShaderLanguageConcept.txt
Tests/SetupTest/: CMakeLists.txt  DefaultShader.frag  DefaultShader.vert  main.cpp
